@@ -227,7 +227,7 @@ h2 {
   overflow-x: hidden;
   background: #e2e2e2;
   top: 0px;
-  padding-top: 25px;
+  padding-top: 29px;
   font-size: 16px;
 
   .nav > li > a {
@@ -271,7 +271,15 @@ h2 {
   }
 }
 
-@media (min-width:767px) {
+@media (max-width: 767px) {
+
+  #sidebar-wrapper {
+    padding-top: 50px;
+  }
+
+}
+
+@media (min-width:768px) {
 
   #sidebar-wrapper {
     left: 399px;
